<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2008 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Manifest configuration. -->
    <skip />
    <!-- Do not translate. android:sharedUserId of this application. -->
    <string name="sharedUserId" translate="false"><xliff:g id="x"></xliff:g></string>
    <!-- Do not translate. android:process of this application. -->
    <string name="process" translate="false"><xliff:g id="x"></xliff:g></string>
    
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="application_name">ADW.Launcher 2</string>
    <!-- Name for all applications running as this uid. -->
    <string name="uid_name">Android Core Apps</string>
    <!-- Default folder name -->
    <string name="folder_name">Folder</string>
    <!-- Title of dialog that appears after user selects Wallpaper from menu -->
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <!-- Button label on Wallpaper Gallery screen; user selects this button to set a specific wallpaper -->
    <string name="wallpaper_instructions">Set wallpaper</string>
    <!-- Option in "Select wallpaper from" dialog box -->
    <string name="pick_wallpaper">Wallpapers</string>
    <!-- Displayed when user selects a shortcut for an app that was uninstalled -->
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <!-- List item for configuring the current wallpaper -->
    <string name="configure_wallpaper">Configure...</string>

    <!-- Folders -->
    <skip />
    <!-- Label of Folder name field in Rename folder dialog box -->
    <string name="rename_folder_label">Folder name</string>
    <!-- Title of dialog box -->
    <string name="rename_folder_title">Rename folder</string>
    <!-- Buttons in Rename folder dialog box -->
    <string name="rename_action">OK</string>
    <!-- Buttons in Rename folder dialog box -->
    <string name="cancel_action">Cancel</string>

    <!-- Shortcuts -->
    <skip />
    <!-- Title of dialog box -->
    <string name="menu_item_add_item">Add to Home screen</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all apps -->
    <string name="group_applications">Applications</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all shortcuts -->
    <string name="group_shortcuts">Shortcuts</string>
    <!-- Options in "Add to Home" dialog box; Title of the folder gadget -->
    <string name="group_folder">New folder</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all live folders -->
    <string name="group_live_folders">Folders</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all widgets/gadgets -->
    <string name="group_widgets">Widgets</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of apps that can set the wallpaper-->
    <string name="group_wallpapers">Wallpapers</string>
    <!-- Options in "Add to Home" dialog box; Name of the Folder widget-->
    <string name="add_folder">Folder</string>
    <!-- Options in "Add to Home" dialog box; Name of the Clock widget-->
    <string name="add_clock">Clock</string>
    <!-- Options in "Add to Home" dialog box; Name of the Picture frame widget-->
    <string name="add_photo_frame">Picture frame</string>
    <!-- Error message when user has filled a home screen, possibly not used -->
    <string name="out_of_space">No more room on this Home screen.</string>
    <!-- Message displayed when a shortcut is created by an external application -->
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <!-- Message displayed when a shortcut is uninstalled by an external application -->
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <!-- Message displayed when an external application attemps to create a shortcut that already exists -->
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>

    <!-- Title of dialog when user is selecting shortcut to add to homescreen -->
    <string name="title_select_shortcut">Select shortcut</string>
    <!-- Title of dialog when user is selecting an application to add to homescreen -->
    <string name="title_select_application">Select application</string>
    <!-- Title of dialog when user is selecting live folder to add to homescreen -->
    <string name="title_select_live_folder">Select folder</string>

    <!-- All applications label for accessibilty (spoken when the button gets focus). -->
    <string name="all_apps_button_label">All applications</string>
    <!-- Label for button in all applications label to go back home (to the workspace / desktop)
         for accessibilty (spoken when the button gets focus). -->
    <string name="all_apps_home_button_label">Home</string>

    <!-- Menus items: -->
    <skip />
    <!-- Verb, menu item used to add an item on the desktop -->
    <string name="menu_add">Add</string>
    <!-- Menu item used to manage installed applications -->
    <string name="menu_manage_apps">Manage apps</string>
    <!-- Noun, menu item used to set the desktop's wallpaper -->
    <string name="menu_wallpaper">Wallpaper</string>
    <!-- Verb, menu item used to initiate global search -->
    <string name="menu_search">Search</string>
    <!-- Noun, menu item used to bring down the notifications shade -->
    <string name="menu_notifications">Notifications</string>
    <!-- Noun, menu item used to show the gestures settings -->
    <string name="menu_gestures">Gestures</string>
    <!-- Noun, menu item used to show the system settings -->
    <string name="menu_settings">Settings</string>

    <!-- Permissions: -->
    <skip />
    <!-- Permission short label -->
    <string name="permlab_install_shortcut">install shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <!-- Permission short label -->
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <!-- Permission short label -->
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <!-- Permission short label -->
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>

    <!-- Widgets: -->
    <skip />    

    <!-- Text to show user in place of a gadget when we can't display it properly -->
    <string name="gadget_error_text">Problem loading widget</string>

    <!-- URL to use when detecting the current default browser. 
         Attempts to mimic homepage_base in Browser; {CID} should be replaced
         by the client-id, e.g. "android-google". -->
    <string name="default_browser_url" translatable="false">
        http://www.google.com/m?client=ms-{CID}&amp;source=android-home-hotseat</string>


	<!-- ADW Added Strings -->
	
	<!-- QuickActions -->
	<string name="menu_delete">Remove</string>
	<string name="menu_uninstall">Uninstall</string>
	<string name="menu_resize">Resize</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_share">Share</string>
	<string name="menu_choose_share_app">Choose app to share</string>
	
	<!-- LauncherActions -->
	<string name="launcher_actions">Launcher Actions</string>
	<string name="action_opendrawer">Open/Close drawer</string>
	<string name="action_adw_settings">ADW Settings</string>

	<!-- Custom Shortcuts -->
	<string name="shirtcut_header">Select your desired application activity to launch.\nYou can select a custom icon too.</string>
	<string name="shirtcut_header_folder">Select a custom icon or specify a custom label</string>
	<string name="shirtcut_pick_activity">Pick your activity</string>
	<string name="shirtcut_label">Label</string>
	<string name="shirtcuts_select_picture">Select picture</string>
	<string name="shirtcuts_crop_picture">Select and crop picture</string>
	<string name="shirtcuts_icon_packs">ADWTheme IconPacks</string>
	<string name="shirtcuts_select_icon_type">Select the icon type</string>
    <string name="shirtcuts_select_icon_pack">Select icon pack</string>
    <string name="shirtcuts_revert">Revert</string>
    <string name="shirtcuts_activity">Activity</string>
	
	<!-- Settings -->
	<string name="settings_cat_homescreen">Homescreens</string>
	<string name="settings_cat_drawer">Drawer</string>
	<string name="settings_drawer_sorting">Sorting</string>
	<string name="settings_endless_desktop_loop">Looping Homescreens</string>
	<string name="settings_swipe_up_action">Swipe Up Action</string>
	<string name="settings_swipe_down_action">Swipe Down Action</string>
	
	<string-array name="settings_sorting_names">
		<item>By Name</item>
		<item>By Times Launched</item>
	</string-array>

    <string name="no.1">1</string>
    <string name="no.2">2</string>
    <string name="no.3">3</string>
    <string name="no.4">4</string>
    <string name="no.5">5</string>
    <string name="no.6">6</string>
    <string name="no.7">7</string>
    <string name="no.8">8</string>
    <string name="no.9">9</string>
    <string name="no.0">0</string>
    <string name="no.22">\#</string>
    <string name="no.11">*</string>
    <string name="abc">ABC</string>
    <string name="def">DEF</string>
    <string name="ghi">GHI</string>
    <string name="jkl">JKL</string>
    <string name="mno">MNO</string>
    <string name="pqr">PQR</string>
    <string name="stu">STU</string>
    <string name="vwx">VWX</string>
    <string name="yz">YZ</string>
    <string name="add">+</string>
    <string name="del">-</string>
    <string name="call_name">拨打</string>
    <string name="cancal_name">清除</string>
    <string name="log_name">记录</string>
    <string name="contarts_name">联系人</string>

</resources>
